--- a/notebook_templates/Table 4 Ablation.ipynb
+++ b/notebook_templates/Table 4 Ablation.ipynb
@@ -304,9 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -348,9 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -423,9 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -732,7 +726,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -746,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.18"
   },
   "toc": {
    "base_numbering": 1,
